--- a/TiendaAngular/src/app/app.component.html
+++ b/TiendaAngular/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-page-barra></app-page-barra>
+
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
