Login con Firebase
Se creo la pagina de Login con Firebase para su autenticación.

--- a/TiendaAngular/src/app/app.component.html
+++ b/TiendaAngular/src/app/app.component.html
@@ -1,10 +1,2 @@
-<app-page-barra></app-page-barra>
-
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    {{ title }}
-  </h1>
-</div>
-
-<app-page-login></app-page-login>
+<flash-messages></flash-messages>
+<router-outlet></router-outlet>
