--- a/TiendaAngular/src/app/components/page-barra/page-barra.component.html
+++ b/TiendaAngular/src/app/components/page-barra/page-barra.component.html
@@ -1,25 +1,21 @@
 <div class="container">
-<nav class="navbar navbar-dark bg-dark mb-5">
-  <a class="navbar-brand" href="/">Angular & Bootstrap</a>
-  <div class="navbar-expand mr-auto">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Home</a>
-      <a class="nav-item nav-link" href="#">About</a>
-      <a class="nav-item nav-link" href="#">Contact</a>
+  <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+    <a class="navbar-brand" href="/">La Bodega</a>
+    <div class="navbar-expand ml-auto navbar-nav">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" [routerLink]="['/tienda']">
+          <i class="fa fa-th"></i>
+        </a>
+        <a class="nav-item nav-link" [routerLink]="['/carro']">
+          <i class="fa fa-shopping-cart"></i>
+        </a>
+        <a class="nav-item nav-link" [routerLink]="['/carro']">
+          <i class="fa fa-inbox"></i>
+        </a>
+        <a class="nav-item nav-link" href="#" (click)="onClickLogout()">
+          <i class="fa fa-sign-out"></i>
+        </a>
+      </div>
     </div>
-  </div>
-  <div class="navbar-expand ml-auto navbar-nav">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link" href="https://github.com/beeman" target="_blank">
-        <i class="fa fa-github"></i>
-      </a>
-      <a class="nav-item nav-link" href="https://twitter.com/beeman_nl" target="_blank">
-        <i class="fa fa-twitter"></i>
-      </a>
-      <a class="nav-item nav-link" href="https://medium.com/@beeman" target="_blank">
-        <i class="fa fa-medium"></i>
-      </a>
-    </div>
-  </div>
-</nav>
+  </nav>
 </div>
